add myNeurons , signup modified, fix myqueue ui, fix user profile

--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,41 +1,43 @@
-<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+<div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <div>
-      <h2 class="text-5xl font-thin tracking-tighter text-zorange">iniciar sesion</h2>
+      <h2 class="text-5xl font-thin tracking-tighter text-zorange">sign in</h2>
     </div>
     <form class="mt-8 space-y-6" action="/auth/signin" method="POST">
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
-          <label for="username" class="sr-only">Email address</label>
-          <input id="username" name="username" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-zmagenta focus:border-zmagenta focus:z-10 sm:text-sm" placeholder="usuario">
+          <input id="username" name="username" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-zmagenta focus:border-zmagenta focus:z-10 sm:text-sm" placeholder="username">
         </div>
         <div>
           <label for="password" class="sr-only">Password</label>
-          <input id="password" name="password" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-zmagenta focus:border-zmagenta focus:z-10 sm:text-sm" placeholder="contraseña">
+          <input id="password" name="password" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-zmagenta focus:border-zmagenta focus:z-10 sm:text-sm" placeholder="password">
         </div>
       </div>
       {{#if errorMessage}}
         <div class="bg-black border-l-4 border-zorange p-4">
-        <div class="flex">
+          <div class="flex">
             <div class="flex-shrink-0">
-            <!-- Heroicon name: solid/exclamation -->
-            <svg class="h-5 w-5 text-zorange" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
-            </svg>
+              <svg class="h-5 w-5 text-zorange" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+              </svg>
             </div>
             <div class="ml-3">
-            <p class="text-sm text-zorange">
-                {{errorMessage}}
-            </p>
+              <p class="text-sm text-zorange">
+                  {{errorMessage}}
+              </p>
             </div>
+          </div>
         </div>
-        </div>
-    {{/if}}
+      {{/if}}
       <div>
         <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-zmagenta focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-zorange">
-          iniciar sesion        
+          lets go !       
         </button>
       </div>
     </form>
   </div>
+</div>
+
+<div>
+  <br><br><br><br><br><br><br>
 </div>
