--- a/views/auth/user.hbs
+++ b/views/auth/user.hbs
@@ -12,7 +12,7 @@
                 <div class="sm:flex sm:items-center sm:justify-between">
                   <div class="sm:flex sm:space-x-5">
                     <div class="flex-shrink-0">
-                      <img class="mx-auto h-20 w-20 rounded-full" src="{{currentUser.avatar}}" alt="">
+                      <img class="mx-auto h-20 w-20 rounded-full" src="/img/{{currentUser.avatar}}.png" alt="">
                     </div>
                     <div class="mt-4 text-center sm:mt-0 sm:pt-1 sm:text-left">
                       <p class="text-sm font-medium text-zgray-8">Welcome back,</p>
@@ -25,17 +25,7 @@
                   </div>
                 </div>
               </div>
-              <div class="border-t border-gray-700 bg-black grid grid-cols-1 divide-y divide-gray-700 sm:grid-cols-2 sm:divide-y-0 sm:divide-x">
-                <div class="px-6 py-5 text-sm font-medium text-center">
-                  <span class="text-zorange">{{ currentUser.myqueues.length }}</span>
-                  <span class="text-gray-600">myQueue lists</span>
-                </div>
-
-                <div class="px-6 py-5 text-sm font-medium text-center">
-                  <span class="text-zorange">{{ currentUser.myqueues.length }}</span>
-                  <span class="text-gray-600">songs stored</span>
-                </div>
-              </div>
+              
             </div>
           </section>
 
@@ -58,10 +48,10 @@
                     <a href="#" class="focus:outline-none">
                       <!-- Extend touch target to entire panel -->
                       <span class="absolute inset-0" aria-hidden="true"></span>
-                      Request time off
+                      0 MB used of 10 TB brain space storage
                     </a>
                   </h3>
-                  <p class="mt-2 text-sm text-gray-500">Doloribus dolores nostrum quia qui natus officia quod et dolorem. Sit repellendus qui ut at blanditiis et quo et molestiae.</p>
+                  <p class="mt-2 text-sm text-gray-500">Get more storage space, buy the UltraPass and add 200 TB of brain space.</p>
                 </div>
                 <span class="pointer-events-none absolute top-6 right-6 text-gray-300 group-hover:text-gray-400" aria-hidden="true">
                   <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -87,7 +77,7 @@
                       Benefits
                     </a>
                   </h3>
-                  <p class="mt-2 text-sm text-gray-500">Doloribus dolores nostrum quia qui natus officia quod et dolorem. Sit repellendus qui ut at blanditiis et quo et molestiae.</p>
+                  <p class="mt-2 text-sm text-gray-500">With your UltraPass, get 100 songs for lifetime free, just 0.003 ETH </p>
                 </div>
                 <span class="pointer-events-none absolute top-6 right-6 text-gray-300 group-hover:text-gray-400" aria-hidden="true">
                   <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
