--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,13 +19,14 @@
             <div class="hidden ml-10 space-x-8 lg:block">
             <a href="/discover" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> discover </a>
             <a href="/myqueue" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myQueue </a>
+            <a href="/myneurons" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myNeurons </a>    
             <a href="/rand-o-matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> rand-o-matic </a>
-            {{!-- <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a> --}}
+            
             </div>
         </div>
         {{#if currentUser}}
         <div class="ml-10 space-x-4">
-            <img class="inline-block h-8 w-8 rounded-full" src="{{ currentUser.avatar }}" alt="">
+            <img class="inline-block h-8 w-8 rounded-full" src="/img/{{ currentUser.avatar }}.png" alt="">
             <a href="/auth/user" class="inline-block py-2 px-4 border border-transparent rounded-md text-base font-medium text-zgray-3 hover:text-zorange">Howdy, {{ currentUser.name }} </a>
             <a href="/auth/signout" class="inline-block py-2 px-4 border border-transparent rounded-md text-base font-medium text-zgray-3 hover:text-zorange">Sign out</a>
         </div>
@@ -39,6 +40,7 @@
         <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
             <a href="/discover" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> discover </a>
             <a href="/myqueue" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myQueue </a>
+            <a href="/myneurons" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myNeurons </a>
             <a href="/rand-o-matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> rand-o-matic </a>
         </div>
     </nav>
