--- a/views/music/album.hbs
+++ b/views/music/album.hbs
@@ -1,10 +1,53 @@
 <span class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">
     {{album.name}}</span>
-<h1 class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">{{album.artists.0.name}}</h1>
+<a href="/music/artist/{{album.artists.0.id}}"><h1 class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">{{album.artists.0.name}}</h1></a>
 
+<div class="flex flex-row">
+  <div class="basis-1/3">
+    <img src="{{album.images.1.url}}" alt="">
+  </div>
 
-<img src="{{album.images.1.url}}" alt="">
-
+  <div class="basis-2/3">
+      <div class="bg-black shadow overflow-hidden rounded-md">
+          <fieldset class="px-6 py-6">
+              {{#each album.tracks.items}}
+                <div>
+                  <div class="relative flex items-start py-4">
+                    <p class="text-zorange mt-3">{{track_number}}</p>
+                    <img src="{{cover}}" alt="" class="mr-3">
+                    <div class="min-w-0 flex-1 text-sm mr-28">
+                      <p class="text-zmagenta text-lg">{{name}}</p>
+                      {{#each artists}}
+                      <span class="text-zgray-10">{{name}}</span>
+                      {{/each}}
+                    </div>
+                    {{#if this.preview_url}}
+                      <audio class="mt-3 h-8 w-1/3"src={{this.preview_url}} controls></audio>
+                    {{else}}
+                      <p class="mt-2 text-md  font-medium text-zorange truncate pointer-events-none"
+                        >Preview not available</p>
+                    {{/if}}
+                    <span>          
+                      <form action="/synapsearch" method="POST">
+                      <input type="text" name="name" value="{{name}}" hidden />
+                      <input type="text" name="artists" value="{{#each artists}} {{this.name}} {{/each}}" hidden />
+                      <input type="text" name="album" value="{{../album.name}}" hidden />
+                      <input type="text" name="cover" value="{{../album.images.2.url}}" hidden />
+                      <input type="text" name="preview_url" value="{{this.preview_url}}" hidden />
+                      <button type="submit" class="mt-3 ml-3" id="addBtn" >
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-zmagenta" viewBox="0 0 20 20" fill="currentColor">
+                          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
+                        </svg>
+                      </button>
+                    </form>
+                  </span>
+                  </div>
+                </div>
+              {{/each}}
+          </fieldset>
+      </div>
+  </div>
+</div>
 <div>
   <br><br><br><br><br><br><br>
 </div>
