--- a/views/music/artist.hbs
+++ b/views/music/artist.hbs
@@ -1,10 +1,45 @@
 <span class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">
     {{artist.name}}</span>
-<span class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">🌟{{artist.popularity}}% popularidad</span>
+<span class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">🌟{{artist.popularity}}% popularity</span>
 <h1 class="text-3xl mb-5 text-zmagenta font-thin tracking-tighter lg:text-4xl">
-    {{artist.followers.total}} seguidores</h1>
+    {{artist.followers.total}} followers</h1>
 
-<img src="{{artist.images.1.url}}" alt="">
+
+
+<div class="flex flex-row">
+  <div class="basis-1/3">
+    <img src="{{artist.images.1.url}}" alt="">
+  </div>
+
+  <div class="basis-2/3">
+      <div class="bg-black shadow overflow-hidden rounded-md">
+          <fieldset class="px-6 py-6">
+              {{#each topTracks}}
+                <div>
+                  <div class="relative flex items-start py-4">
+                    <p class="text-zorange mt-3">⭐</p>
+                    <img src="{{cover}}" alt="" class="mr-3">
+                    <div class="min-w-0 flex-1 text-sm mr-28">
+                      <p class="text-zmagenta text-lg">{{name}}</p>
+                      {{#each artists}}
+                      <span class="text-zgray-10">{{name}}</span>
+                      {{/each}}
+                    </div>
+                    {{#if this.preview_url}}
+                      <audio class="mt-3 h-8 w-1/3"src={{this.preview_url}} controls></audio>
+                    {{else}}
+                      <p class="mt-2 text-md  font-medium text-zorange truncate pointer-events-none"
+                        >Preview not available</p>
+                    {{/if}}
+                  </div>
+                </div>
+              {{/each}}
+          </fieldset>
+      </div>
+  </div>
+</div>
+
+
 
 <div>
   <br><br><br><br><br><br><br>
