--- a/views/myqueue.hbs
+++ b/views/myqueue.hbs
@@ -126,13 +126,17 @@
             {{#each details.songs}}
               <div>
                 <div class="relative flex items-start py-4">
-                  <div class="min-w-0 flex-1 text-sm">
+                  <img src="{{cover}}" alt="" class="mr-3">
+                  <div class="min-w-0 flex-1 text-sm mr-28">
                     <label for="comments" class="font-medium text-zmagenta">{{name}}</label>
                     <p id="comments-description" class="text-zorange">{{_id}}</p>
                   </div>
-                  <div class="ml-3 flex items-center h-5">
-                    <input id="comments" aria-describedby="comments-description" name="comments" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
-                  </div>
+                  {{#if this.preview_url}}
+                    <audio class="mt-3 h-8 w-1/3"src={{this.preview_url}} controls></audio>
+                  {{else}}
+                    <p class="mt-2 text-md  font-medium text-zorange truncate pointer-events-none"
+                      >Preview not available</p>
+                  {{/if}}
                 </div>
               </div>
             {{/each}}
